samples/_failures_safe/1761719328_000c78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4eb302b.c: In function ‘main’:
./samples/SAFE/__tmp_c4eb302b.c:133:5: error: expected declaration or statement at end of input
  133 |     if (mat1.cols == mat2.rows) {
      |     ^~
./samples/SAFE/__tmp_c4eb302b.c:133:5: error: expected declaration or statement at end of input
